--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,19 @@
 <html>
     <head>
         <title>Homepage</title>
+        <link rel="stylesheet" href="/index.css">
     </head>
     <body>
         <div class="container">
-            <h3><%= title %></h3>
-            <%- include('navbar', {links: links}) %>
+            <div> 
+                <h3><%= title %></h3>
+                <%- include('navbar', {links: links}) %>
+            </div>
             <ul class="list">
                 <% messages.forEach((message) => { %>
                     <li class="message"><%= message.user %>, 
                         <%= message.text %>, 
-                        <%= message.added %>,
+                        <%= message.added %>
                         <a href="<%= message.user %>">open</a>
                     </li>
                 <% }) %>
