extra router for modulation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
                     <li class="message"><%= message.user %>, 
                         <%= message.text %>, 
                         <%= message.added %>
-                        <a href="<%= message.user %>">open</a>
+                        <a href="display/<%= message.user %>">open</a>
                     </li>
                 <% }) %>
             </ul>
