--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title><%=message.user %></title>
-        <link rel="stylesheet" href="/message.css">
+        <link rel="stylesheet" href="/messageStyle.css">
     </head>
     <body>
         <div class="posted-message">
